# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  generate_diff.py
gendiff/builder/: build_structure_differences.py  generate_differences.py  get_file_data.py
gendiff/building_diff/: generate_differences.py  get_file_data.py  open_file.py  search_differences.py
gendiff/data/: get_file.py
gendiff/formaters/: identify_formater.py  json.py  plain.py  stylish.py
gendiff/formatters/: format_diff.py  json.py  plain.py  stylish.py
gendiff/functions/: determine_file_type.py  generate_differences.py  open_file.py  open_json_file.py  output_differences.py  search_differences.py
gendiff/get_data/: get_file_data.py  parse_data.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_gendiff.py
tests/fixtures/: correct_diff_json.txt  correct_flat_diff_json.txt
