[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Evaluator differences between the two data structures"
authors = ["AndyRiddle <kas2850.cuk@yandex.ru>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
