[tool.poetry]
name = "hexlet-code"
version = "0.2.2"
description = "Evaluator differences between the two data structures"
authors = ["AndyRiddle <kas2850.cuk@yandex.ru>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
autopep8 = "^1.5.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
